# Smart-Contract-Revenue-Sharing

./: .gitignore  LICENSE  README.md  cabal.project  ci.nix  default.nix  revenue-sharing.cabal  shell.nix
.github/workflows/: nix.yml
app/: Main.hs
nix/: default.nix  sources.json
nix/pkgs/haskell/: haskell.nix
scripts/: README.md  compile.sh  hash-revenue-sharing.sh  query-protocol-parameters.sh
scripts/core/: lock-1-input-tx.sh  share-1-input-tx.sh
scripts/envars/: mainnet-env.envars  testnet-env.envars
scripts/failure-cases/: buy-no-nft-tx.sh  invalid-split.sh
scripts/happy-path/: lock-tx.sh  share-tx.sh
scripts/happy-path/share/: lock-tx.sh  swap-tx.sh
scripts/mainnet/: fifty-pkh.txt  protocol-parameters.json  revenue-sharing.addr  revenue-sharing.plutus  sender-pkh.txt  sixteenseven-pkh.txt  thirtythreethree-pkh.txt
scripts/query/: fifty.sh  sc.sh  sender.sh  sixteenseven.sh  thirtythreethree.sh
scripts/scratch/: combine-utxos.sh  transfer-funds-back-to-sender.sh
scripts/testnet/: fifty-pkh.txt  protocol-parameters.json  revenue-sharing.addr  revenue-sharing.plutus  sender-pkh.txt  sixteenseven-pkh.txt  thirtythreethree-pkh.txt
scripts/wallets/: make-all-wallets.sh  make-pkh.sh  make-wallet-and-pkh.sh  make-wallet.sh
src/Canonical/: RevenueSharing.hs
