cabal-version: 2.4
name:          revenue-sharing
version:       0.1.0.0
license:
author:        Richard Wallace
maintainer:    rwallace@purefn.dev
build-type:    Simple

common lang
  build-depends:    base ^>=4.14
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  exposed-modules: Canonical.RevenueSharing
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , freer-extras
    , playground-common
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise

  hs-source-dirs:  src
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wno-unused-packages -Werror

executable create-smart-contract
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , cardano-api
    , optparse-applicative
    , plutus-ledger
    , plutus-tx
    , revenue-sharing
